Crash when attempting to create an override for an object with a cloth modifier #70555

Closed
opened 2019-10-05 13:14:00 +02:00 by Luc Revardel · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 17:34, hash: 6ac2a2061f
Worked: (optional)

Short description of error
Crash when attempting to create an override for an object with a cloth modifier

Exact steps for others to reproduce the error

  • start blender
  • link collection named "collection" from attached file
  • attempt to create an override on object "cube" => crash

Tried to run it with the debugger by interest: on the process of diffing the RNA resource with path "modifiers["Cloth"].settings.rest_shape_key", some pointers are passed to ShapeKey_name_length() with ptr->data being NULL

note: the attached file has been created from default cube for which a cloth modifier has been added.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 17:34, hash: `6ac2a2061f` Worked: (optional) **Short description of error** Crash when attempting to create an override for an object with a cloth modifier **Exact steps for others to reproduce the error** - start blender - link collection named "collection" from attached file - attempt to create an override on object "cube" => crash Tried to run it with the debugger by interest: on the process of diffing the RNA resource with path "modifiers[\"Cloth\"].settings.rest_shape_key", some pointers are passed to ShapeKey_name_length() with ptr->data being NULL note: the attached file has been created from default cube for which a cloth modifier has been added.
Author

Added subscriber: @luc

Added subscriber: @luc
Author
[cubeWithClothMod.blend](https://archive.blender.org/developer/F7790903/cubeWithClothMod.blend)
Luc Revardel self-assigned this 2019-10-05 14:04:53 +02:00
Luc Revardel was unassigned by Brecht Van Lommel 2019-10-05 14:06:42 +02:00
Bastien Montagne was assigned by Brecht Van Lommel 2019-10-05 14:07:00 +02:00
Bastien Montagne was unassigned by Luc Revardel 2019-10-05 14:07:01 +02:00
Author

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne was assigned by Brecht Van Lommel 2019-10-05 14:07:48 +02:00
Author

Just found that #60458 shows a similar backtrace.
At least, the steps to reproduce described here are simpler than for #60458.
Sorry for the possible duplicate.

Just found that #60458 shows a similar backtrace. At least, the steps to reproduce described here are simpler than for #60458. Sorry for the possible duplicate.

This issue was referenced by 7a100a3f60

This issue was referenced by 7a100a3f602ae6bec963ba537933722abf457368

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70555
No description provided.