Fix T70555: Crash when attempting to create an override for an object with a cloth modifier.

Was not taking into account the case where pointer RNA prop is valid,
but has no data (i.e. is a 'null' pointer)...